== **Release Notes Version 3.1.80-12**

* Release date: 13/Jan/2021
* Type: Standard
* Main changes: redborder manager.

This is the release notes for version 3.1.80-12.
Multiple bugs has been reported and fixed.

=== What's new

* Nothing new on this release.


=== Improvements

* Improvement #12649: install npdi 3.4 for pmacctd in proxy

=== Resolved Issues

* BugFix #12544: CEP: Validation doesn´t work in 'New Rule Wizard'
* BugFix #12545: CEP: Failed to export rules created using the wizard
* BugFix #12709: CEP: Translation missing on import rule
* BugFix #12263: CEP: error messages have weird characters
* BugFix #12542: CEP: Cannot add new output when creation a rule.
* BugFix #12492: CEP: Creation error on default rules
* BugFix #12550: Alarms: Not allowing null search values when creating filter
* BugFix #12696: Alarms: Missing translation en.monitor2 on formulary
* BugFix #12569: Social: Tiles view giving druid error
* BugFix #12698: Social: Please Wait hangs on RAW info view with error 500
* BugFix #12570: Dashboards: Error 500 when importing dashboard from other manager
* BugFix #12536: Reports: Error 500 when a wrong file is inserted
* BugFix #12540: Reports: Generate PDF button not working
* BugFix #12567: Reports: Error when a future date is selected
* BugFix #12609: Reports/Dashboards: Problem when a different file is uploaded
* BugFix #12671: Reports/Dashboards: Problem uploading a file that is not an image in the widget EDITOR
* BugFix #12632: Cluster Settings: Save button is not working
* BugFix #12513: Cluster Settings: Delete all the default rules problem
* BugFix #12520: Cluster Settings: Broken time period value on Historial Rules
* BugFix #12524: Cluster Setting: Rule title docs not change when the rule type is changed
* BugFix #12526: General Settings: Delete button in port variables not working
* BugFix #12516: General Settings: "Disappearing" categories
* BugFix #12525: General Settings: Error 500 in Port Variables