@@ -866,6 +866,11 @@ b.conum * { color: inherit !important; }
 <p>This is the release notes for version 3.1.80-12.
 Multiple bugs has been reported and fixed.</p>
 </div>
+<div class="paragraph">
+<p>If you want to update from a version prior to 3.1.80-12, please download and
+execute first this script in the node where you will make the cluster update process:
+<a href="http://repo.redborder.com/utils/rb_preupdate_80-12.sh" class="bare">http://repo.redborder.com/utils/rb_preupdate_80-12.sh</a></p>
+</div>
 <div class="sect2">
 <h3 id="_whats_new">What&#8217;s new</h3>
 <div class="ulist">
