@@ -7,6 +7,10 @@
 This is the release notes for version 3.1.80-12.
 Multiple bugs has been reported and fixed.
 
+If you want to update from a version prior to 3.1.80-12, please download and
+execute first this script in the node where you will make the cluster update process:
+http://repo.redborder.com/utils/rb_preupdate_80-12.sh
+
 === What's new
 
 * Nothing new on this release.
